# governed-crypto-trading-research

./: .gitattributes  .gitignore  AGENTS.md  AUTONOMOUS_TRAINING_LOOP.md  CITATION.cff  Makefile  PUBLIC_SNAPSHOT_MANIFEST.json  README.md  STATUS.md  TASKS.md  pyproject.toml
configs/: mvp.yaml  v10_derivatives_data.yaml  v11_derivatives_signal_existence.yaml  v12_intraday_path_signal_existence.yaml  v13_data_family_feasibility.yaml  v14_dvol_data.yaml  v15_dvol_signal_existence.yaml  v16_cftc_positioning_feasibility.yaml  v17_treasury_curve_feasibility.yaml  v18_treasury_curve_data.yaml  v19_treasury_signal_existence.yaml  v20_evidence_ledger.yaml  v21_control_certificate.yaml  v22_prospective_holdout.yaml  v23_reproducibility_bundle.yaml  v24_research_review.yaml  v25_final_audit.yaml  v26_zero_shot_candidate_spec.yaml  v27_non_target_universe_audit.yaml  v28_non_target_dataset.yaml  v29_multi_asset_scope_amendment.yaml  v2_open_to_open.yaml  v30_training_universe_inventory.yaml  v31_selected_source_manifest.yaml  v32_selected_universe_dataset.yaml  v33_patch_transformer.yaml  v34_scientific_harness.yaml  v35_non_target_pretraining.yaml  v36_supervised_non_target.yaml  v37_failure_autopsy.yaml  v37_source_domain_one_shot.yaml  v3_always_long_top1.yaml  v41_ranking_excess_spec.yaml  v42_ranking_excess_harness.yaml  v43_ranking_excess_pretraining.yaml  v44_ranking_excess_supervised.yaml  v45_ranking_excess_screen.yaml  v46_ranking_excess_failure_autopsy.yaml  v47_joint_absolute_relative_triplet_spec.yaml  v48_joint_absolute_relative_harness.yaml  (+42 more)
docs/: PUBLIC_RELEASE.md
(+362 files in other folders)
