[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tlm"
version = "0.1.0"
description = "Governed, leakage-aware multi-asset daily trading research"
readme = "README.md"
requires-python = ">=3.11"
keywords = [
  "time-series",
  "pytorch",
  "quantitative-research",
  "cross-sectional-ranking",
  "temporal-convolutional-network",
  "reproducible-research",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "pyarrow>=14",
  "PyYAML>=6",
  "scikit-learn>=1.3",
  "torch>=2.1",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
tlm = "tlm.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
asyncio_default_fixture_loop_scope = "function"
